@@ -1,3 +1,7 @@
+2017-08-26  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .travis.yml: Updated to use run.sh from r-travis
+
 2016-05-07  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION: Minor edits to catch upto current CRAN standards
